fixed awesome submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "revelation"]
+[submodule "config/awesome/revelation"]
 	path = config/awesome/revelation
 	url = git://github.com/bioe007/awesome-revelation.git
-[submodule "awesome-freedesktop"]
+[submodule "config/awesome/awesome-freedesktop"]
 	path = config/awesome/awesome-freedesktop
 	url = git://github.com/terceiro/awesome-freedesktop.git
