--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "home/vim/bundle/jellybeans"]
 	path = home/vim/bundle/jellybeans
 	url = https://github.com/nanotech/jellybeans.vim.git
+[submodule "home/vim/bundle/vim-fugitive"]
+	path = home/vim/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
