--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "home/vim/bundle/supertab"]
 	path = home/vim/bundle/supertab
 	url = https://github.com/ervandew/supertab.git
+[submodule "home/vim/bundle/snipmate"]
+	path = home/vim/bundle/snipmate
+	url = https://github.com/msanders/snipmate.vim.git
