--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "home/vim/bundle/snipmate"]
 	path = home/vim/bundle/snipmate
 	url = https://github.com/msanders/snipmate.vim.git
+[submodule "home/vim/bundle/dwm"]
+	path = home/vim/bundle/dwm
+	url = https://github.com/spolu/dwm.vim.git
