fixed bug in tmux freezing, Ctrl-q to fix

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,6 +28,7 @@ set-option -g visual-bell on
 
 # Unbind existing tmux key bindings, except a few that are commented out.
 unbind C-b
+unbind C-s
 unbind C-o
 #unbind Space #change layout
 #unbind ! #break-pane
