--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,7 +27,7 @@ setw -g automatic-rename on
 set-option -g visual-bell on
 
 # Unbind existing tmux key bindings, except a few that are commented out.
-unbind C-b
+#unbind C-b
 unbind C-s
 unbind C-o
 #unbind Space #change layout
@@ -112,6 +112,9 @@ bind-key -t vi-copy -n C-NPage page-down
 
 #pull window into pane
 bind @ command-prompt -p "join pane from:"  "join-pane -s '%%'"
+
+#clear history
+bind x clear-history
 
 # window cycling "<" or "," for previous window
 bind -r , previous-window
