--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,9 @@ setw -g automatic-rename on
 #bell stuff
 set-option -g visual-bell on
 
+#increase history length
+set -g history-limit 10000
+
 # Unbind existing tmux key bindings, except a few that are commented out.
 unbind C-b
 unbind C-s
