--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -172,5 +172,5 @@ set-window-option -g clock-mode-colour colour64 #green
 #status-bar left
 set -g status-left '#[fg=cyan][#[fg=white]#S#[fg=cyan]][#[default]'
 #status-bar right
-set -g status-right '#[fg=cyan]][#[fg=colour245]#(cut -d " " -f 1-3 /proc/loadavg)#[fg=cyan]][#[fg=blue,bright]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=cyan]]'
+set -g status-right '#[fg=cyan]][#[fg=colour244]#(hostname) #[fg=colour245]#(cut -d " " -f 1-3 /proc/loadavg)#[fg=cyan]][#[fg=blue,bright]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=cyan]]'
 
