--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,11 +2,11 @@
 #set -g default-terminal "screen-256color"
 set -g default-terminal "rxvt-256color"
 
-# Make it use C-z;
-unbind C-z
-set -g prefix C-z
-bind z send-prefix  # these last to allow C-z to be passed through
-bind C-z send-prefix
+# Make it use C-x;
+unbind C-x
+set -g prefix C-x
+bind x send-prefix  # these last to allow C-x to be passed through
+bind C-x send-prefix
 
 # its not logical to have the most left 'tab' on the very right of the key strip
 set -g base-index 1
@@ -47,7 +47,7 @@ unbind .
 #unbind = #scroll-mode rebound below
 #unbind ? #list-keys
 unbind D
-#unbind '[' #copy-paste (paste is ctrl-z ])
+#unbind '[' #copy-paste (paste is ctrl-x ])
 #unbind ']' #use ctrl-space and alt-w to select/copy
 #unbind c #new-window
 #unbind d #detatch-client
