--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,5 @@
 #get 256 colors working
-#set -g default-terminal "screen-256color"
-set -g default-terminal "rxvt-256color"
+set -g default-terminal "screen"
 
 # Make it use C-x;
 unbind C-x
