--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -173,5 +173,5 @@ set-window-option -g clock-mode-colour colour64 #green
 set -g status-left-length 15
 set -g status-left '#[fg=cyan][#[fg=white]#S #[fg=colour245]#h#[fg=cyan]]'
 #status-bar right
-set -g status-right '#[fg=cyan][#[fg=colour245]#(cut -d " " -f 1-3 /proc/loadavg)#[fg=cyan]][#[fg=blue,bright]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=cyan]]'
+set -g status-right '#[fg=cyan][#[fg=colour245]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=blue,bright]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=cyan]]'
 
