tmux origional meta key, window renaming, and no bell

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,11 +1,10 @@
-#get 256 colors working
-set -g default-terminal "screen"
+
 
 # Make it use C-x;
 unbind C-x
-set -g prefix C-x
-bind x send-prefix  # these last to allow C-x to be passed through
-bind C-x send-prefix
+set -g prefix2 C-x
+#bind x send-prefix  # these last two allow C-x to be passed through
+#bind C-x send-prefix2
 
 # its not logical to have the most left 'tab' on the very right of the key strip
 set -g base-index 1
@@ -23,7 +22,7 @@ set-option -g mouse-select-window on
 setw -g automatic-rename on
 
 #bell stuff
-set-option -g visual-bell on
+set-option -g visual-bell off
 
 #increase history length
 set -g history-limit 10000
@@ -114,6 +113,9 @@ bind-key -t vi-copy -n C-NPage page-down
 
 #pull window into pane
 bind @ command-prompt -p "join pane from:"  "join-pane -s '%%'"
+
+# allow manual window renaming
+bind Y command-prompt -p "Rename Window to:" "rename-window '%%'"
 
 #clear history
 bind x clear-history
