bring back tmux current path

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -127,8 +127,12 @@ bind -r . next-window
 bind -r > next-window
 
 # more intuitive split keys
-bind h split-window -h
-bind v split-window -v
+# tmux 1.9+ use: -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
+bind v split-window -v -c "#{pane_current_path}"
+
+# rebind this to set path for tmux 1.9+
+bind c new-window -c "#{pane_current_path}"
 
 #kill
 bind k confirm-before kill-pane
