--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -138,6 +138,9 @@ bind k confirm-before kill-pane
 # bind r to reload source file
 bind r source-file ~/.tmux.conf #used for testing this file
 
+# set 256 color
+if-shell 'echo $TERM | grep -q color' 'set -g default-terminal "screen-256color"'
+
 #status-bar colors/settings
 set -g display-time 1500
 #### COLOUR see:http://ethanschoonover.com/solarized#the-values
