--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -54,7 +54,7 @@ glx-swap-method = "undefined";
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = true;
+shadow = false;
 # Don't draw shadows on DND windows.
 no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
@@ -99,7 +99,7 @@ shadow-exclude = [
     "class_g ?= 'Xfce4-power-manager'"
 ];
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
-shadow-ignore-shaped = false;
+shadow-ignore-shaped = true;
 
 #################################
 #
