--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,10 +11,11 @@ set -g base-index 1
 setw -g mode-keys vi
 
 #mouse support 
-setw -g mode-mouse on
-set-option -g mouse-select-pane on #messes with putty copy/paste
+set -g mouse on
+#setw -g mode-mouse on
+#set-option -g mouse-select-pane on #messes with putty copy/paste
 #set-option -g mouse-resize-pane on
-set-option -g mouse-select-window on
+#set-option -g mouse-select-window on
 
 #automatic rename
 setw -g automatic-rename on
@@ -101,13 +102,13 @@ unbind M-p
 #bind = scroll-mode
 
 # v and y like vi in copy-mode
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+#bind-key -t vi-copy 'v' begin-selection
+#bind-key -t vi-copy 'y' copy-selection
 
 # Shift+PageUp/PageDown start scroll mode
 bind-key -n C-PPage copy-mode -u
-bind-key -t vi-copy -n C-PPage page-up
-bind-key -t vi-copy -n C-NPage page-down
+#bind-key -t vi-copy -n C-PPage page-up
+#bind-key -t vi-copy -n C-NPage page-down
 
 #pull window into pane
 bind @ command-prompt -p "join pane from:"  "join-pane -s '%%'"
