--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,7 +24,7 @@ setw -g automatic-rename on
 set-option -g visual-bell off
 
 #increase history length
-set -g history-limit 1000
+set -g history-limit 2000
 
 # Unbind existing tmux key bindings, except a few that are commented out.
 #unbind C-b
@@ -49,6 +49,7 @@ unbind D
 #unbind c #new-window
 #unbind d #detatch-client
 unbind f
+unbind m
 unbind i
 #unbind l #last-window
 #unbind n #next-window
@@ -114,7 +115,7 @@ bind-key -n C-PPage copy-mode -u
 bind @ command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
 # allow manual window renaming
-bind Y command-prompt -p "Rename Window to:" "rename-window '%%'"
+#bind Y command-prompt -p "Rename Window to:" "rename-window '%%'"
 
 #clear history
 bind x clear-history
@@ -177,7 +178,7 @@ set-option -g display-panes-colour colour166 #orange
 set-window-option -g clock-mode-colour colour64 #green
 
 #status-bar left
-set -g status-left-length 15
+set -g status-left-length 25
 set -g status-left '#[fg=cyan][#[fg=white]#S #[fg=colour245]#h#[fg=cyan]]'
 #status-bar right
 set -g status-right '#[fg=cyan][#[fg=colour245]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=blue,bright]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=cyan]]'
