--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -146,6 +146,10 @@ fade-out-step = 0.03;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
 
+# Disable fading when switching desktops
+# https://github.com/chjj/compton/issues/314
+no-fading-openclose = true;
+
 # Specify a list of conditions of windows that should not be faded.
 fade-exclude = [ ];
 
