--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -184,6 +184,6 @@ set -g status-left '#[fg=cyan][#[fg=white]#S #[fg=colour245]#h#[fg=cyan]]'
 set -g status-right '#[fg=cyan][#[fg=colour245]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=blue,bright]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=cyan]]'
 
 # plugins
-run-shell ~/.tmux_plugins/resurrect/resurrect.tmux
-run-shell ~/.tmux_plugins/continuum/continuum.tmux
+#run-shell ~/.tmux_plugins/resurrect/resurrect.tmux
+#run-shell ~/.tmux_plugins/continuum/continuum.tmux
 
