--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # C-x prefix;
-unbind C-x
-set -g prefix2 C-x
+#unbind C-x
+#set -g prefix2 C-x
 #bind x send-prefix  # these last two allow C-x to be passed through
 #bind C-x send-prefix2
 
