--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -147,28 +147,21 @@ if-shell 'echo $TERM | grep -q color' 'set -g default-terminal "screen-256color"
 set -g display-time 1500
 #### COLOUR see:http://ethanschoonover.com/solarized#the-values
 # default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+set-option -g status-style fg=colour136,bg=colour235,default
 
 # default window title colors
-set-window-option -g window-status-fg white #colour244
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr bright
+set-option -g window-status-style bg=default,fg=white,bright
 
 # active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+set-window-option -g window-status-current-style fg=colour166,bg=default,bright
 
 # pane border
-set-option -g pane-border-fg colour240 #base01
-set-option -g pane-active-border-fg cyan #base01
+set-option -g pane-border-style fg=colour240 #base01
+set-option -g pane-active-border-style fg=cyan #base01
 
 # message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-set -g message-attr bright
+set-option -g message-style fg=colour166,bg=colour235
+set -g message-style bright
 
 # pane number display
 set-option -g display-panes-active-colour colour33 #blue
@@ -182,3 +175,4 @@ set -g status-left-length 25
 set -g status-left '#[fg=cyan][#[fg=white]#S #[fg=colour245]#h#[fg=cyan]]'
 #status-bar right
 set -g status-right '#[fg=cyan][#[fg=colour245]#(cut -d " " -f 1-3 /proc/loadavg) #[fg=blue,bright]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=cyan]]'
+
