--- a/apps/winbox.desktop
+++ b/apps/winbox.desktop
@@ -3,8 +3,8 @@ Name=Winbox
 StartupWMClass=Winbox
 Comment=Mikrotik Winbox
 GenericName=Winbox
-Exec=/home/lanrat/bin/winbox
-Icon=/home/lanrat/code/dotfiles/winbox/winbox.png
+Exec=/home/lanrat/.local/bin/winbox
+Icon=network-server
 Type=Application
 StartupNotify=true
 Categories=Wine;Network;
