gnome syncing enabled

--- a/gnome/settings.ini
+++ b/gnome/settings.ini
@@ -51,3 +51,23 @@ workspaces-only-on-primary=false
 disable-user-extensions=false
 #disabled-extensions=['ubuntu-appindicators@ubuntu.com', 'ding@rastersoft.com', 'tactile@lundal.io', 'Resource_Monitor@Ory0n', 'color-picker@tuberry', 'ubuntu-dock@ubuntu.com']
 #enabled-extensions=['caffeine@patapon.info', 'bluetooth-quick-connect@bjarosze.gmail.com', 'custom-hot-corners-extended@G-dH.github.com', 'unite@hardpixel.eu', 'tiling-assistant@leleat-on-github', 'launch-new-instance@gnome-shell-extensions.gcampax.github.com', 'improved-workspace-indicator@michaelaquilina.github.io', 'tiling-assistant@ubuntu.com', 'Move_Clock@rmy.pobox.com', 'reorder-workspaces@jer.dev', 'notification-position@github.com', 'notification-timeout@chlumskyvaclav.gmail.com', 'Bluetooth-Battery-Meter@maniacx.github.com']
+
+# gnome terminal profile's settings
+# first is default
+[org/gnome/terminal/legacy/profiles:]
+list=['b1dcc9dd-5262-4d8d-a863-c897e6d979b9']
+
+[org/gnome/terminal/legacy/profiles:/:b1dcc9dd-5262-4d8d-a863-c897e6d979b9]
+audible-bell=false
+background-color='rgb(23,20,33)'
+background-transparency-percent=0
+cursor-blink-mode='off'
+cursor-shape='block'
+foreground-color='rgb(208,207,204)'
+scrollback-lines=100000
+scrollbar-policy='never'
+text-blink-mode='always'
+use-theme-colors=false
+use-theme-transparency=true
+use-transparent-background=true
+visible-name='Ian'
