better gnome config

--- a/gnome/settings.ini
+++ b/gnome/settings.ini
@@ -3,6 +3,7 @@ restore-session=false
 
 [org/gnome/desktop/interface]
 clock-show-weekday=true
+clock-format='24h'
 color-scheme='prefer-dark'
 
 [org/gnome/desktop/media-handling]
@@ -40,6 +41,7 @@ event-sounds=false
 [org/gnome/desktop/wm/preferences]
 focus-mode='sloppy'
 resize-with-right-button=true
+auto-raise=true
 
 [org/gnome/mutter]
 check-alive-timeout=uint32 60000
@@ -71,3 +73,6 @@ use-theme-colors=false
 use-theme-transparency=true
 use-transparent-background=true
 visible-name='Ian'
+
+[org/gnome/desktop/datetime]
+automatic-timezone=true
